--- a/src/main/resources/static/root/root_student.html
+++ b/src/main/resources/static/root/root_student.html
@@ -8,6 +8,9 @@
         min-width: 150px;
         margin-right: 10px;
     }
+    .dt-paging-button.page-item {
+        color: white !important;
+    }
 </style>
 
 <div id="user-header" class="d-flex align-items-center mb-3 p-3 border border-opacity-100 bg-white rounded">
@@ -34,7 +37,7 @@
 </div>
 
 <div class="p-3 mb-3 border border-opacity-100 bg-white rounded">
-    <table class="table table-striped table-hover">
+    <table id="studentTable" class="table table-striped table-hover">
         <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#studentModal" onclick="insertUser('studentForm', 3)">新增</button>
         <thead>
             <tr>
@@ -56,10 +59,7 @@
 </div>
 
 <div aria-label="Page navigation example" class="border border-opacity-100 bg-white rounded">
-    <div class="pagination p-3">
-        <li class="page-item"><a class="page-link" href="#">1</a></li>
-        <li class="page-item"><a class="page-link" href="#">2</a></li>
-        <li class="page-item"><a class="page-link" href="#">3</a></li>
+    <div id="mypagination" class="p-3">
         <!-- 更多分頁按鈕 -->
     </div>
 </div>
