--- a/src/main/resources/static/root/root_student.html
+++ b/src/main/resources/static/root/root_student.html
@@ -198,7 +198,10 @@
             $('#page_length').change();
         });
 
+        // 分頁實現
         $('#page_length').on('change', async function() {
+
+            // 1. 先決定每頁要顯示的列數
             $('#studentBody').find('tr').removeClass('d-none');
             var trLength = $('#studentBody').find('tr').length;
             var length = Math.min(trLength, $(this).val());
@@ -206,6 +209,7 @@
                 $('#studentBody').find('tr').eq(i).addClass('d-none');
             }
 
+            // 2. 計算總共有幾頁
             var page = Math.ceil(trLength / $(this).val());
                 
             $('.pagination').html('');
@@ -228,7 +232,7 @@
                     </a>
                 </li>
             `);
-            // 為每個頁面連結設定點擊事件
+            // 3. 處理每頁顯示的內容
             $('.pagination .page-link').on('click', function(e) {
                 // e.preventDefault();
                 $('.page-link.active').removeClass('active');
