--- a/src/main/resources/static/root/root_course_manager.html
+++ b/src/main/resources/static/root/root_course_manager.html
@@ -6,6 +6,14 @@
 <div class="p-3 mb-3 border border-opacity-100 bg-white rounded">
     <table class="table table-striped table-hover">
         <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#courseModal" onclick="insertCourseInfo()">新增</button>
+        <div>
+            <select id="page_length" name="page_length" class="form-select mt-3" style="width: 150px;">
+                <option value="10">10</option>
+                <option value="25">25</option>
+                <option value="50">50</option>
+                <option value="100">100</option>
+            </select>
+        </div>
         <thead>
             <tr>
                 <th>科系</th>
@@ -25,10 +33,6 @@
 
 <div aria-label="Page navigation example" class="border border-opacity-100 bg-white rounded">
     <div class="pagination p-3">
-        <li class="page-item"><a class="page-link" href="#">1</a></li>
-        <li class="page-item"><a class="page-link" href="#">2</a></li>
-        <li class="page-item"><a class="page-link" href="#">3</a></li>
-        <!-- 更多分頁按鈕 -->
     </div>
 </div>
 
@@ -96,12 +100,14 @@
         // 沒有id的select 才綁定事件
         $('select[name="depId"]').each(function() {
             if (!$(this).attr('id')) {
-                $(this).on('change', function() {
-                    searchCourse();
+                $(this).on('change', async function() {
+                    await searchCourse();
+                    bindPage('courseBody');
+                    $('#page_length').change();
                 });
             }
         });
         await loadDepartment();
-        searchCourse();
+        $('#user-header select[name="depId"]').change();
     });
 </script>
