--- a/src/main/resources/static/teacher.html
+++ b/src/main/resources/static/teacher.html
@@ -48,6 +48,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 	<script src="./js/common.js"></script>
 	<script src="./js/teacher_course.js"></script>
+	<script src="./js/pagination.js"></script>
 	<script>
 		$(document).ready(function() {
 			var token = localStorage.getItem("token");
