--- a/src/main/resources/static/teacher/teacher_course.html
+++ b/src/main/resources/static/teacher/teacher_course.html
@@ -1,6 +1,5 @@
 <div class="d-flex align-items-center mb-3 p-3 border border-opacity-100 bg-white rounded">
-    <label for="year">年份:</label>
-    <select class="form-select w-25" name="year" id="year">
+    <select class="form-select" name="year" id="year" style="width: 150px;">
     </select>
 </div>
 
