--- a/src/main/resources/static/root/root_course_info.html
+++ b/src/main/resources/static/root/root_course_info.html
@@ -192,7 +192,20 @@
             $('#courseForm')[0].reset();
             $('select[name="depId"]').change();
         }
-        alert(message);
+        $.alert({
+            title: '訊息',
+            content: message,
+            animationSpeed: 500,
+            buttons : {
+                ok : {
+                    btnClass: 'btn-blue',
+                    text : '確定',
+                    action : function() {
+                        
+                    }
+                }
+            }
+        });
     }
 
     var updateCourseOfferings = async(e) => {
