--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,6 +7,7 @@
     <title>Login Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.4/jquery-confirm.min.css" rel="stylesheet">
 </head>
 
 <body class="d-flex align-items-center vh-100">
@@ -64,6 +65,7 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.4/jquery-confirm.min.js"></script>
     <script src="./js/common.js"></script>
     <script>
         $('#togglePasswordButton').click(function () {
@@ -101,7 +103,21 @@
                     localStorage.setItem("token", data.token);
                     localStorage.setItem("userName", data.userName);
                     localStorage.setItem("userId", data.userId);
-                    window.location.href = data.page;
+                    $.alert({
+                        title: '訊息',
+                        content: '登入成功',
+                        animationSpeed: 500,
+                        buttons : {
+                            ok : {
+                                btnClass: 'btn-blue',
+                                text : '確定',
+                                action : function() {
+                                    window.location.href = data.page;
+                                }
+                            }
+                        }
+                    });
+                    
 				} else {
 					$('#errorMessage').removeClass('d-none');
 				}
