--- a/src/main/resources/static/root/root_student.html
+++ b/src/main/resources/static/root/root_student.html
@@ -191,7 +191,7 @@
                 $('#user-header input[name="classId"]').val(data[0].classId);
             }
             await searchUser('studentBody', 'studentModal', 3);
-            $('#page_length').change();
+            $('#page_length').trigger('change', [$('.page-link.active').text()]);
         });
 
         bindPage('studentBody');
