--- a/src/main/resources/static/root/root_course_info.html
+++ b/src/main/resources/static/root/root_course_info.html
@@ -192,19 +192,9 @@
             $('#courseForm')[0].reset();
             $('select[name="depId"]').change();
         }
-        $.alert({
-            title: '訊息',
-            content: message,
-            animationSpeed: 500,
-            buttons : {
-                ok : {
-                    btnClass: 'btn-blue',
-                    text : '確定',
-                    action : function() {
-                        
-                    }
-                }
-            }
+        Swal.fire({
+            title: message,
+            icon: state ? "success" : "error"
         });
     }
 
