--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -66,6 +66,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.4/jquery-confirm.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./js/common.js"></script>
     <script>
         $('#togglePasswordButton').click(function () {
@@ -103,21 +104,14 @@
                     localStorage.setItem("token", data.token);
                     localStorage.setItem("userName", data.userName);
                     localStorage.setItem("userId", data.userId);
-                    $.alert({
-                        title: '訊息',
-                        content: '登入成功',
-                        animationSpeed: 500,
-                        buttons : {
-                            ok : {
-                                btnClass: 'btn-blue',
-                                text : '確定',
-                                action : function() {
-                                    window.location.href = data.page;
-                                }
-                            }
+                    Swal.fire({
+                        title: "登入成功",
+                        icon: "success"
+                    }).then((result) => {
+                        if (result.isConfirmed) {
+                            window.location.href = data.page;
                         }
                     });
-                    
 				} else {
 					$('#errorMessage').removeClass('d-none');
 				}
