--- a/src/main/resources/static/root/root_course_manager.html
+++ b/src/main/resources/static/root/root_course_manager.html
@@ -103,7 +103,7 @@
                 $(this).on('change', async function() {
                     await searchCourse();
                     bindPage('courseBody');
-                    $('#page_length').trigger('change', [$('.page-link.active').text()]);
+                    $('#page_length').trigger('change', [1]);
                 });
             }
         });
