--- a/src/main/resources/static/forget.html
+++ b/src/main/resources/static/forget.html
@@ -14,7 +14,8 @@
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-body text-center">
-                    <p>發送Email請稍後...</p>
+                    <img src="https://media.giphy.com/media/sSgvbe1m3n93G/source.gif" alt="Loading...">
+                    <p>Email發送中請稍後...</p>
                 </div>
             </div>
         </div>
