--- a/src/main/resources/static/root/root_student.html
+++ b/src/main/resources/static/root/root_student.html
@@ -10,6 +10,17 @@
     }
 </style>
 
+<div class="modal fade" id="loadingModal" tabindex="-1" aria-labelledby="loadingModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-body text-center">
+                <img src="https://media.giphy.com/media/sSgvbe1m3n93G/source.gif" alt="Loading...">
+                <p>上傳檔案中請稍後...</p>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div id="user-header" class="d-flex align-items-center mb-3 p-3 border border-opacity-100 bg-white rounded">
     <input name="classId" type="hidden">
     <div class="form-group">
@@ -35,9 +46,11 @@
 
 <div class="p-3 mb-3 border border-opacity-100 bg-white rounded">
     <table id="studentTable" class="table table-striped table-hover">
-        <button class="btn btn-success" style="margin-right: 15px;" data-bs-toggle="modal" data-bs-target="#studentModal"
-            onclick="insertUser('studentForm', 3)">新增</button>
-        <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#importModal">匯入</button>
+        <button class="btn btn-success" style="margin-right: 15px;" data-bs-toggle="modal"
+            data-bs-target="#studentModal" onclick="insertUser('studentForm', 3)">新增</button>
+        <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#importModal"
+            style="margin-right: 15px;">匯入</button>
+        <button class="btn btn-success" style="margin-right: 15px;" onclick="updateGrade()">年級更新</button>
         <div>
             <select id="page_length" name="page_length" class="form-select mt-3" style="width: 150px;">
                 <option value="10">10</option>
@@ -67,7 +80,7 @@
 
 <div class="border border-opacity-100 bg-white rounded d-flex justify-content-center">
     <div class="pagination p-3">
-        
+
     </div>
 </div>
 
@@ -169,7 +182,8 @@
                 <input type="hidden" name="permissionId" id="permissionId" value="3">
                 <div class="modal-body">
                     <div class="form-group">
-                        <a href="http://localhost:8080/api/downloadUserInfo" class="btn btn-success" onclick="download()">下載</a>
+                        <a href="http://localhost:8080/api/downloadUserInfo" class="btn btn-success"
+                            onclick="download()">下載</a>
                     </div>
                     <div class="form-group">
                         <label for="year">年&#12288;&#12288;份:</label>
@@ -177,7 +191,8 @@
                     </div>
                     <div class="form-group">
                         <label for="userFile">檔&#12288;&#12288;案:</label>
-                        <input type="file" id="userFile" name="userFile" class="form-control" accept=".xls,.xlsx" required>
+                        <input type="file" id="userFile" name="userFile" class="form-control" accept=".xls,.xlsx"
+                            required>
                     </div>
                 </div>
                 <div class="modal-footer">
@@ -191,7 +206,7 @@
 
 <script>
     $(document).ready(async function () {
-        $('#year').val(new Date().getFullYear()-1911);
+        $('#year').val(new Date().getFullYear() - 1911);
         $('#studentForm').on('submit', (e) => {
             e.preventDefault();
             saveUser('studentForm', 'studentBody', 'studentModal');
@@ -232,24 +247,51 @@
         await $('#user-header select[name="depId"]').change();
     });
 
-    $('#importForm').submit(async function(e) {
+    $('#importForm').submit(async function (e) {
         e.preventDefault();
+        // 顯示模態視窗
+        $('#loadingModal').modal('show');
+        var modalElement = document.getElementById('importModal');
+        var modalInstance = bootstrap.Modal.getInstance(modalElement);
+        modalInstance.hide();
+
         const res = await fetch(`${ip}/user/insertUserFromExcel`, {
             method: 'POST',
             headers: {
                 'Authorization': `Bearer ${token}`
             },
-            body : new FormData($('#importForm')[0])
+            body: new FormData($('#importForm')[0])
         });
-        
+
         const { state, message, data } = await res.json();
-        console.log(data);
-        var modalElement = document.getElementById('importModal');
-        var modalInstance = bootstrap.Modal.getInstance(modalElement);
-        modalInstance.hide();
+        // 顯示模態視窗
+        $('#loadingModal').modal('hide');
+        $('#importForm')[0].reset();
+        if (state) {
+            $('#user-header select[name="depId"]').change();
+        }
         Swal.fire({
             title: message,
             icon: state ? "success" : "error"
         });
-    })
+    });
+
+    async function updateGrade() {
+        const response = await fetch(`${ip}/user/updateCurrentStudent`, {
+            method : "PUT",
+            headers : {
+                'Authorization': `Bearer ${token}`
+            }
+        });
+        const {state, message, data} = await response.json();
+
+        if (state) {
+            $('#user-header select[name="depId"]').change();
+        }
+
+        Swal.fire({
+            title: message,
+            icon: state ? "success" : "error"
+        });
+    }
 </script>
