--- a/src/main/resources/static/forget.html
+++ b/src/main/resources/static/forget.html
@@ -129,6 +129,7 @@
                     title: "請輸入正確的Email",
                     icon: "error"
                 });
+                $('body').removeClass('swal2-shown swal2-height-auto');
             }
         }
 
