--- a/src/main/resources/static/root/root_course_info.html
+++ b/src/main/resources/static/root/root_course_info.html
@@ -40,7 +40,7 @@
 
 <div class="p-3 mb-3 border border-opacity-100 bg-white rounded">
     <table class="table table-striped table-hover">
-        <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#courseModal" onclick="insertCourseInfo()">新增</button>
+        <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#courseModal" style="margin-right: 15px;" onclick="insertCourseInfo()">新增</button>
         <thead>
             <tr>
                 <th>科系</th>
