--- a/src/main/resources/static/root/root_course_manager.html
+++ b/src/main/resources/static/root/root_course_manager.html
@@ -5,7 +5,8 @@
 
 <div class="p-3 mb-3 border border-opacity-100 bg-white rounded">
     <table class="table table-striped table-hover">
-        <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#courseModal" onclick="insertCourseInfo()">新增</button>
+        <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#courseModal" style="margin-right: 15px;" onclick="insertCourseInfo()">新增</button>
+        <button class="btn btn-success" onclick="importCourseOffering()">匯入課程</button>
         <div>
             <select id="page_length" name="page_length" class="form-select mt-3" style="width: 150px;">
                 <option value="10">10</option>
@@ -110,4 +111,26 @@
         await loadDepartment();
         $('#user-header select[name="depId"]').change();
     });
+
+    async function importCourseOffering() {
+        Swal.fire({
+            title: '請輸入年份',
+            input: 'text',
+            inputPlaceholder: '輸入年份',
+            inputValue: new Date().getFullYear() - 1911, // 設置初始值為今年的民國年份
+            showCancelButton: true,
+            confirmButtonText: '匯入',
+            cancelButtonText: '取消',
+            preConfirm: (year) => {
+                if (!year || !/^\d+$/.test(year)) {
+                    Swal.showValidationMessage('請輸入一個有效的年份');
+                }
+            }
+        }).then((result) => {
+            /* Read more about isConfirmed, isDenied below */
+            if (result.isConfirmed) {
+                Swal.fire("Saved!", "", "success");
+            }
+        });
+    }
 </script>
