--- a/src/main/resources/static/student/student_score.html
+++ b/src/main/resources/static/student/student_score.html
@@ -47,7 +47,7 @@
                 <tr>
                     <td>${obj.courseYear}</td>
                     <td>${obj.courseSemester}</td>
-                    <td>${obj.courseDep}</td>
+                    <td>${obj.departmentName}</td>
                     <td>${obj.courseName}</td>
                     <td>${obj.score}</td>
                 </tr>`);
