--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -104,6 +104,7 @@
                     localStorage.setItem("token", data.token);
                     localStorage.setItem("userName", data.userName);
                     localStorage.setItem("userId", data.userId);
+                    localStorage.setItem("permissionId", data.permissionId);
                     Swal.fire({
                         title: "登入成功",
                         icon: "success"
