--- a/src/main/resources/static/root.html
+++ b/src/main/resources/static/root.html
@@ -84,6 +84,8 @@
 			renderHtml('content', 'root/root_front_page.html');
 			sideBarLinkage();
 			$('#headerName').append(`${userName}`);
+
+			interval = setInterval(singleSessionControl, 100);
 		});
 
 		// sidebar 連動
