--- a/src/main/resources/static/student.html
+++ b/src/main/resources/static/student.html
@@ -77,6 +77,7 @@
 			renderHtml('content', 'student/student_front_page.html');
 			sideBarLinkage();
 			$('#headerName').append(`${userName}`);
+			interval = setInterval(singleSessionControl, 100);
 		});
 
 		// sidebar 連動
