老師的班級可以設定為空

--- a/src/main/resources/static/root/root_teacher.html
+++ b/src/main/resources/static/root/root_teacher.html
@@ -91,12 +91,14 @@
                     <div class="form-group">
                         <label>班&#12288;&#12288;級:</label>
                         <select id="classGrade" name="classGrade" class="form-select">
+                            <option value=""></option>
                             <option value="1">1</option>
                             <option value="2">2</option>
                             <option value="3">3</option>
                             <option value="4">4</option>
                         </select>年
                         <select id="className" name="className" class="form-select">
+                            <option value=""></option>
                             <option value="甲">甲</option>
                             <option value="乙">乙</option>
                             <option value="丙">丙</option>
