--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -33,23 +33,15 @@
                                     <i id="togglePasswordIcon" class="bi bi-eye"></i>
                                 </button>
                             </div>
-                            <!-- 新增一個警告消息 -->
-                            <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
-                                <symbol id="exclamation-triangle-fill" fill="currentColor" viewBox="0 0 16 16">
-                                    <path
-                                        d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
-                                </symbol>
-                            </svg>
 
-                            <div id="errorMessage" class="alert alert-danger d-flex align-items-center d-none"
-                                role="alert">
-                                <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img"
-                                    aria-label="Warning:">
-                                    <use xlink:href="#exclamation-triangle-fill" />
-                                </svg>
-                                <div>帳號或密碼錯誤</div>
+                            <!-- 新增驗證碼欄位 -->
+                            <div class="mb-3 input-group">
+                                <span class="input-group-text"><i class="bi bi-shield-check"></i></span>
+                                <input type="text" class="form-control" id="captcha" name="captcha"
+                                    placeholder="請輸入驗證碼">
+                                <!-- 顯示驗證碼圖片 -->
+                                <img id="captchaImage" src="" alt="Captcha">
                             </div>
-
                             <div class="d-grid mb-3">
                                 <button type="submit" class="btn btn-primary">登入</button>
                             </div>
@@ -69,6 +61,17 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./js/common.js"></script>
     <script>
+        var passcode;
+        $(document).ready(async function() {
+            const response = await fetch(`${ip}/api/passcode`);
+            const {state, message, data} = await response.json();
+            if (state) {
+                passcode = message;
+                const base64String = `data:image/jpeg;base64, ${data}`;
+                document.getElementById('captchaImage').src = base64String;
+            }
+        });
+
         $('#togglePasswordButton').click(function () {
             var passwordInput = $('#password');
             var passwordIcon = $('#togglePasswordIcon');
@@ -84,6 +87,16 @@
         
         $('#login').submit(async(e) => {
             e.preventDefault();
+
+            if ($('#captcha').val() != passcode) {
+                Swal.fire({
+                    title: "請輸入正確的驗證碼",
+                    icon: "error"
+                });
+                $('body').removeClass('swal2-shown swal2-height-auto');
+                return;
+            }
+
             $('#errorMessage').addClass("d-none");
             var username = $("#username").val();
             var password = $("#password").val();
@@ -120,12 +133,10 @@
                         title: "帳號或密碼錯誤",
                         icon: "error"
                     });
-					//$('#errorMessage').removeClass('d-none');
 				}
                 $('body').removeClass('swal2-shown swal2-height-auto');
             } catch (error) {
                 console.error('Network error or other issue:', error);
-                $('#errorMessage').removeClass('d-none');
             }
         });
     </script>
