--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -38,7 +38,7 @@
                             <div class="mb-3 input-group">
                                 <span class="input-group-text"><i class="bi bi-shield-check"></i></span>
                                 <input type="text" class="form-control" id="captcha" name="captcha"
-                                    placeholder="請輸入驗證碼">
+                                    placeholder="請輸入驗證碼" required>
                                 <!-- 顯示驗證碼圖片 -->
                                 <img id="captchaImage" src="" alt="Captcha">
                                 <!-- 新增刷新圖示 -->
