--- a/src/main/resources/static/root/root_course_manager.html
+++ b/src/main/resources/static/root/root_course_manager.html
@@ -32,7 +32,7 @@
     </table>
 </div>
 
-<div aria-label="Page navigation example" class="border border-opacity-100 bg-white rounded">
+<div aria-label="Page navigation example" class="border border-opacity-100 bg-white rounded d-flex justify-content-center">
     <div class="pagination p-3">
     </div>
 </div>
