修改老師頁面打成績的BUG

--- a/src/main/resources/static/teacher/teacher_score.html
+++ b/src/main/resources/static/teacher/teacher_score.html
@@ -33,6 +33,7 @@
             <option value="甲">甲</option>
             <option value="乙">乙</option>
             <option value="丙">丙</option>
+            <option value="選修">選修</option>
         </select>
     </div>
     <div class="form-group">
