--- a/course-main/src/main/resources/static/teacher.html
+++ b/course-main/src/main/resources/static/teacher.html
@@ -51,6 +51,8 @@
 	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 	<script src="./js/common.js"></script>
 	<script src="./js/teacher_course.js"></script>
+	<!-- 引入CKEditor CDN -->
+	<script src="https://cdn.ckeditor.com/4.22.1/standard/ckeditor.js"></script>
 	<script>
 		$(document).ready(function() {
 			if (token == null || permissionId != 2) {
