--- a/course-main/src/main/resources/static/teacher/teacher_course.html
+++ b/course-main/src/main/resources/static/teacher/teacher_course.html
@@ -11,8 +11,7 @@
                 <th>學期</th>                
                 <th>科系</th>
                 <th>班級</th>
-                <th>課名</th>
-                <th>課程資訊</th>
+                <th>課名</th>                
                 <th>編輯</th>
             </tr>
         </thead>
@@ -22,7 +21,7 @@
 </div>
 
 <div class="modal fade" id="courseModal" tabindex="-1" aria-labelledby="courseModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="courseModalLabel">課程訊息</h5>
@@ -50,7 +49,7 @@
                     </div>
                     <div class="form-group">
                         <label for="courseContent">課程介紹:</label>
-                        <textarea id="courseContent" name="courseContent" class="form-control" rows="8"></textarea>
+                        <textarea id="courseContent" name="courseContent"></textarea>
                     </div>
                 </div>
                 <div class="modal-footer">
@@ -67,6 +66,9 @@
         await loadCourseYear('year');
         findCourseByTeacherId();
         loadDepartment();
+        CKEDITOR.replace('courseContent', {
+			height: 500
+		});
     });
 
     $('#year').on('change', (e) => {
